--- a/waifu.css
+++ b/waifu.css
@@ -26,7 +26,7 @@
 	bottom: -1000px;
 	left: 0;
 	line-height: 0;
-	position: fixed;
+	position: right;
 	transform: translateY(3px);
 	transition: transform .3s ease-in-out, bottom 3s ease-in-out;
 	z-index: 1;
@@ -84,7 +84,7 @@
 	color: #aaa;
 	opacity: 0;
 	position: absolute;
-	left: -10px;
+	right: -10px;
 	top: 70px;
 	transition: opacity 1s;
 }
