--- a/waifu.css
+++ b/waifu.css
@@ -5,7 +5,7 @@
 	color: #fff;
 	cursor: pointer;
 	font-size: 12px;
-	left: 0;
+	left: 100;
 	margin-left: -100px;
 	padding: 5px 2px 5px 5px;
 	position: fixed;
@@ -26,7 +26,7 @@
 	bottom: -1000px;
 	left: 0;
 	line-height: 0;
-	position: right;
+	position: fixed;
 	transform: translateY(3px);
 	transition: transform .3s ease-in-out, bottom 3s ease-in-out;
 	z-index: 1;
