--- a/waifu.css
+++ b/waifu.css
@@ -26,8 +26,8 @@
 	bottom: -1000px;
 	right: 0;
 	line-height: 0;
-	position: fixed;
-	transform: translateY(3px);
+	position: relative;
+	transform: translateX(3px);
 	transition: transform .3s ease-in-out, bottom 3s ease-in-out;
 	z-index: 1;
 }
