--- a/waifu.css
+++ b/waifu.css
@@ -26,7 +26,7 @@
 	bottom: -1000px;
 	right: 0;
 	line-height: 0;
-	position: relative;
+	position: fixed;
 	transform: translateX(3px);
 	transition: transform .3s ease-in-out, bottom 3s ease-in-out;
 	z-index: 1;
